# KitchenManagerApi

./: .gitignore  docker-compose.yml
Backend/: .env  Cargo.toml  Dockerfile  rustfmt.toml
Backend/migrations/2022-10-14-163754_products/: up.sql
Backend/src/: console.rs  constants.rs  database.rs  like.rs  main.rs  models.rs  products.rs  schema.rs
Backend/src/orders/: collection.rs  mod.rs  model.rs  service.rs  stream.rs
Backend/src/products/: collection.rs  mod.rs  model.rs  service.rs
