[package]
name = "KitchenManagerApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
log = "0.4.0"
env_logger = "0.9.1"
termion = "*"
dotenv = "0.15.0"
futures = "0.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 